Buttons vergrößert & blau gefärbt

--- a/files/www/lan/password.html
+++ b/files/www/lan/password.html
@@ -21,7 +21,7 @@
 	<div><br />Das Passwort ist für den Zugriff auf die Weboberfläche des Routers und auch den Zugriff per SSH. Der Benutzername ist 'root'.</div>
 </fieldset>
 <div>
-	<button type="button" onclick="apply()">&Auml;ndern</button>
+	<button class="final-button" type="button" onclick="apply()">&Auml;ndern</button>
 </div>
 
 </body>
