--- a/files/www/lan/network.html
+++ b/files/www/lan/network.html
@@ -14,7 +14,7 @@
 <div id="assignment"></div>
 <div id="wireless"></div>
 <div id="switches"></div>
-<button type="button" onclick="save_data()">Speichern</button>
+<button class="final-button" type="button" onclick="save_data()">Speichern</button>
 
 </body>
 </html>
