--- a/files/www/lan/settings.html
+++ b/files/www/lan/settings.html
@@ -25,7 +25,7 @@
 	<div><br />Die f&#252;r das Freifunknetz beanspruchte Internet-Bandbreite am WAN kann hier begrenzt werden.</div>
 </fieldset>
 
-<button type="button" onclick="save_data()">Speichern</button>
+<button class="final-button" type="button" onclick="save_data()">Speichern</button>
 
 </body>
 </html>
