Texte als Absätze formatiert

--- a/files/www/lan/password.html
+++ b/files/www/lan/password.html
@@ -18,7 +18,7 @@
 	<div>
 		<label>Bestätigung:</label> <input id="p2" type="password">
 	</div>
-	<div><br />Das Passwort ist für den Zugriff auf die Weboberfläche des Routers und auch den Zugriff per SSH. Der Benutzername ist 'root'.</div>
+	<p>Das Passwort ist für den Zugriff auf die Weboberfläche des Routers und auch den Zugriff per SSH. Der Benutzername ist 'root'.</p>
 </fieldset>
 <div>
 	<button class="final-button" type="button" onclick="apply()">&Auml;ndern</button>
