--- a/files/www/lan/settings.html
+++ b/files/www/lan/settings.html
@@ -17,12 +17,12 @@
 <fieldset>
 	<legend>Inhalte verk&#252;nden</legend>
 	<span id="resource"></span>
-	<div><br />Jeder Router kann einen Eintrag auf der Statusseite aller anderen Router anzeigen lassen. Dies soll helfen Inhalte im Freifunknetz zu finden.</div>
+	<p>Jeder Router kann einen Eintrag auf der Statusseite aller anderen Router anzeigen lassen. Dies soll helfen Inhalte im Freifunknetz zu finden.</p>
 </fieldset>
 <fieldset>
 	<legend>Bandbreitenkontrolle</legend>
 	<span id="traffic"></span>
-	<div><br />Die f&#252;r das Freifunknetz beanspruchte Internet-Bandbreite am WAN kann hier begrenzt werden.</div>
+	<p>Die f&#252;r das Freifunknetz beanspruchte Internet-Bandbreite am WAN kann hier begrenzt werden.</p>
 </fieldset>
 
 <button class="final-button" type="button" onclick="save_data()">Speichern</button>
