--- a/files/www/lan/upgrade.html
+++ b/files/www/lan/upgrade.html
@@ -16,14 +16,14 @@
 		<button type="button" onclick="lookup_upgrade()">Suchen</button>
 		<button type="button" onclick="lookup_and_apply_upgrade()">Suchen und Aktualisieren</button>
 	</div>
-	<div><br />Die Freifunk-Community bietet neue Firmware-Versionen für die Router an.<br />Diese enthalten Fehlerbereinigungen und neue Funktionen.</div>
+	<p>Die Freifunk-Community bietet neue Firmware-Versionen für die Router an. Diese enthalten Fehlerbereinigungen und neue Funktionen.</p>
 </fieldset>
 <fieldset>
 	<legend>Router zur&#252;cksetzen</legend>
 	<div>
 		<button type="button" onclick="restore_firmware()">Zur&#252;cksetzen</button>
 	</div>
-	<div><br />Alle Einstellungen werden zur&#252;ckgesetzt und der Router startet neu.</div>
+	<p>Alle Einstellungen werden zur&#252;ckgesetzt und der Router startet neu.</p>
 </fieldset>
 <fieldset>
 	<legend>Manuelles Update</legend>
@@ -42,7 +42,7 @@
 		</div>
 	</div>
 	</form>
-	<div><br />Hier kann ein Freifunk-Image verwendet werden (*-sysupgrade.bin) oder die Firmware des Routerherstellers.</div>
+	<p>Hier kann ein Freifunk-Image verwendet werden (*-sysupgrade.bin) oder die Firmware des Routerherstellers.</p>
 </fieldset>
 
 
