--- a/files/www/lan/upgrade.html
+++ b/files/www/lan/upgrade.html
@@ -11,7 +11,7 @@
 <body onload="init();">
 
 <fieldset>
-	<legend>Aktuelle Firmware Suchen</legend>
+	<legend>Aktuelle Firmware suchen</legend>
 	<div>
 		<button type="button" onclick="lookup_upgrade()">Suchen</button>
 		<button type="button" onclick="lookup_and_apply_upgrade()">Suchen und Aktualisieren</button>
@@ -19,7 +19,7 @@
 	<div><br />Die Freifunk-Community bietet neue Firmware-Versionen für die Router an.<br />Diese enthalten Fehlerbereinigungen und neue Funktionen.</div>
 </fieldset>
 <fieldset>
-	<legend>Router Zur&#252;cksetzen</legend>
+	<legend>Router zur&#252;cksetzen</legend>
 	<div>
 		<button type="button" onclick="restore_firmware()">Zur&#252;cksetzen</button>
 	</div>
