--- a/files/www/lan/settings.html
+++ b/files/www/lan/settings.html
@@ -15,7 +15,7 @@
 	<span id="general"></span>
 </fieldset>
 <fieldset>
-	<legend>Inhalte Verk&#252;nden</legend>
+	<legend>Inhalte verk&#252;nden</legend>
 	<span id="resource"></span>
 	<div><br />Jeder Router kann einen Eintrag auf der Statusseite aller anderen Router anzeigen lassen. Dies soll helfen Inhalte im Freifunknetz zu finden.</div>
 </fieldset>
