Erklärungen umformuliert & Infos verlinkt

--- a/files/www/lan/password.html
+++ b/files/www/lan/password.html
@@ -18,7 +18,7 @@
 	<div>
 		<label>Bestätigung:</label> <input id="p2" type="password">
 	</div>
-	<p>Das Passwort ist für den Zugriff auf die Weboberfläche des Routers und auch den Zugriff per SSH. Der Benutzername ist 'root'.</p>
+	<p>Das Passwort sichert den Zugriff auf diese <a href="https://192.168.133.1/">Weboberfläche</a> ab, sowie den Direktzugriff auf den Router via <a href="https://de.wikipedia.org/wiki/Secure_Shell">SSH</a>. Der Benutzername lautet "root".</p>
 </fieldset>
 <div>
 	<button class="final-button" type="button" onclick="apply()">&Auml;ndern</button>
