--- a/files/www/lan/upgrade.html
+++ b/files/www/lan/upgrade.html
@@ -16,7 +16,7 @@
 		<button type="button" onclick="lookup_upgrade()">Suchen</button>
 		<button type="button" onclick="lookup_and_apply_upgrade()">Suchen und Aktualisieren</button>
 	</div>
-	<p>Die Freifunk-Community bietet neue Firmware-Versionen für die Router an. Diese enthalten Fehlerbereinigungen und neue Funktionen.</p>
+	<p>Die <a href="https://ffbsee.de/index.php/Hauptseite">Freifunk-Community Bodensee</a> bietet neue Firmware-Versionen für diesen Router an. Diese enthalten Fehlerbereinigungen und neue Funktionen.</p>
 </fieldset>
 <fieldset>
 	<legend>Router zur&#252;cksetzen</legend>
@@ -38,11 +38,11 @@
 		</label>
 		<div>
 			<input type="checkbox" name="keep_config" value="yes" checked>
-			<label>Konfiguration erhalten</label>
+			<label>Konfiguration beibehalten</label>
 		</div>
 	</div>
 	</form>
-	<p>Hier kann ein Freifunk-Image verwendet werden (*-sysupgrade.bin) oder die Firmware des Routerherstellers.</p>
+	<p>Hier kann ein Freifunk-Image verwendet werden (*-sysupgrade.bin) oder die <a href="https://de.wikipedia.org/wiki/Firmware">Firmware</a> des Routerherstellers.</p>
 </fieldset>
 
 
