--- a/files/www/lan/index.html
+++ b/files/www/lan/index.html
@@ -128,6 +128,6 @@ function logout() {
 <div id="body"></div>
 
 <div id="footer"></div>
-
+<img class="footer-svg" src="footer.ffbsee.animated.svg"/>
 </body>
 </html>
