Design fix for disabled JavaScript and the SVG

--- a/files/www/lan/index.html
+++ b/files/www/lan/index.html
@@ -128,6 +128,7 @@ function logout() {
 <div id="body"></div>
 
 <div id="footer"></div>
+<noscript><h1>JavaScript ist deaktiviert</h1><br/><a>Hallo Freifunker, die Administration &#xFC;ber das Webinterface ben&#xF6;tigt <b>JavaScript!</b><br/><br/>Um diese Seite sinvoll Nutzen zu k&#xF6;nnen <b>aktivieren</b> Sie bitte entweder JavaScript oder Nutzen Sie den Zugang &#xFC;ber SSH. in diesem fall müssen Sie sich aber schon etwas mit der Konfiguration unter OpenWRT auskennen.<br/><br/><br/><br/></noscript>
 <img class="footer-svg" src="footer.ffbsee.animated.svg"/>
 </body>
 </html>
