Erkennen von non-stable Firmware Versionen

--- a/files/www/lan/home.html
+++ b/files/www/lan/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 
+
 <html>
 <head>
 <title>Home</title>
@@ -9,7 +10,7 @@
 <script src="home.js"></script>
 </head>
 <body onload="init();">
-
+<span id="firmware_vers_stable_development"></span>
 <fieldset>
 <legend id="system">System</legend>
 <div><label>Name: </label><span id="name">?</span></div>
