Added config option to choose from domestic or foreign vpn exits

--- a/files/www/lan/home.html
+++ b/files/www/lan/home.html
@@ -19,6 +19,7 @@
 <div><label>Bekannte Knoten: </label><span id="node_count">?</span></div>
 <div><label>Nachbarknoten: </label><span id="neigh_count">?</span></div>
 <div><label>VPN Server aktiv: </label><span id="vpn_server">?</span></div>
+<div><label>VPN Exittunnel: </label><span id="vpn_exittunnel">?</span></div>
 <div><label>Laufzeit: </label><span id="uptime">?</span></div>
 <div><label>CPU: </label><span id="load">?</span></div>
 <div><label>RAM: </label><span id="memory_usage">?</span></div>
