--- a/files/www/lan/home.html
+++ b/files/www/lan/home.html
@@ -21,6 +21,7 @@
 <div><label>VPN Server aktiv: </label><span id="vpn_server">?</span></div>
 <div><label>VPN Exittunnel: </label><span id="vpn_exittunnel">?</span></div>
 <div><label>IP Protokoll VPN: </label><span id="ipv6_only">?</span></div>
+<div><label>VPN Exit:</label><span id="vpn_exit_location">?</span></div>
 <div><label>Laufzeit: </label><span id="uptime">?</span></div>
 <div><label>CPU: </label><span id="load">?</span></div>
 <div><label>RAM: </label><span id="memory_usage">?</span></div>
