Minor fixes & enhancements of web frontend

--- a/files/www/lan/update.html
+++ b/files/www/lan/update.html
@@ -11,6 +11,11 @@
 <body onload="init();">
 
 <fieldset>
+	<legend>Routerdetails</legend>
+	<div><label>Modell: </label><span id="model">?</span></div>
+	<div><label>Firmware Version: </label><span id="firmware_version">?</span></div>
+</fieldset>
+<fieldset>
 	<legend>Aktuelle Firmware suchen</legend>
 	<div>
 		<button type="button" class="button blue sharp" onclick="lookup_upgrade()">Suchen</button>
