--- a/files/www/lan/home.html
+++ b/files/www/lan/home.html
@@ -18,7 +18,7 @@
 <div><label>MAC-Adresse: </label><span id="mac">?</span></div>
 <div><label>Bekannte Knoten: </label><span id="node_count">?</span></div>
 <div><label>Nachbarknoten: </label><span id="neigh_count">?</span></div>
-<div><label>VPN Server aktiv: </label><span id="vpn_server">?</span></div>
+<div><label>Supernode: </label><span id="vpn_server">?</span></div>
 <div><label>IP Protokoll VPN: </label><span id="ipv6_only">?</span></div>
 <div><label>VPN Exit:</label><span id="vpn_exit_location">?</span></div>
 <div><label>Laufzeit: </label><span id="uptime">?</span></div>
@@ -27,6 +27,23 @@
 <div><label>Flash: </label><span id="rootfs_usage">?</span></div>
 <div><label>System: </label><span id="uname">?</span></div>
 <div><label>Uhrzeit: </label><span id="date">?</span></div>
+</fieldset>
+
+<fieldset>
+<legend id="software">Software</legend>
+<div><label>Firmware Version: </label><span id="firmware_version">?</span></div>
+<div><label>OpenWrt Version: </label><span id="openwrt_version">?</span></div>
+<div><label>Batman-Adv Version: </label><span id="batman_version">?</span></div>
+<div><label>Fastd Version: </label><span id="fastd_version">?</span></div>
+</fieldset>
+
+<fieldset>
+<legend id="wan">Netz: WAN</legend>
+<div><label>Internet Vorhanden: </label><span id="has_internet">?</span></div>
+<div><label>&#220;bertragen: </label><span id="wan_rx_data">?</span>&darr; <span id="wan_tx_data">?</span>&uarr;</div>
+<div><label>Geschwindigkeit: </label><span id="wan_rx_speed">?</span>&darr;  <span id="wan_tx_speed">?</span>&uarr;</div>
+<div><label>IPv4 Adressen: </label><span id="wan_addr4">?</span></div>
+<div><label>IPv6 Adressen: </label><span id="wan_addr6">?</span></div>
 </fieldset>
 
 <fieldset>
@@ -45,23 +62,6 @@
 <div><label>Geschwindigkeit: </label><span id="lan_rx_speed">?</span>&darr; <span id="lan_tx_speed">?</span>&uarr;</div>
 <div><label>IPv4 Adressen: </label><span id="lan_addr4">?</span></div>
 <div><label>IPv6 Adressen: </label><span id="lan_addr6">?</span></div>
-</fieldset>
-
-<fieldset>
-<legend id="wan">Netz: WAN</legend>
-<div><label>Internet Vorhanden: </label><span id="has_internet">?</span></div>
-<div><label>&#220;bertragen: </label><span id="wan_rx_data">?</span>&darr; <span id="wan_tx_data">?</span>&uarr;</div>
-<div><label>Geschwindigkeit: </label><span id="wan_rx_speed">?</span>&darr;  <span id="wan_tx_speed">?</span>&uarr;</div>
-<div><label>IPv4 Adressen: </label><span id="wan_addr4">?</span></div>
-<div><label>IPv6 Adressen: </label><span id="wan_addr6">?</span></div>
-</fieldset>
-
-<fieldset>
-<legend id="software">Software</legend>
-<div><label>Firmware Version: </label><span id="firmware_version">?</span></div>
-<div><label>OpenWrt Version: </label><span id="openwrt_version">?</span></div>
-<div><label>Batman-Adv Version: </label><span id="batman_version">?</span></div>
-<div><label>Fastd Version: </label><span id="fastd_version">?</span></div>
 </fieldset>
 
 </body>
