Minor fixes & enhancements of web frontend new feature: hide/display SVG via hidden toogle-link

--- a/files/www/lan/index.html
+++ b/files/www/lan/index.html
@@ -30,6 +30,14 @@ function adv_toggle(e)
 	adv_apply();
 }
 
+// Funtion will alternate between showing or hiding footer SVG
+function removeFooterSVG()
+{
+	var footersvg = document.getElementById("footer-svg");
+	footersvg.style.display = footersvg.style.display === 'none' ? '' : 'none';
+}
+
+
 function nav_onclick()
 {
 	setText('msg', "");
@@ -91,7 +99,6 @@ function reboot() {
 		setText('msg', data);
 	});
 }
-
   
 function setTitle() {
 	send("/cgi-bin/misc", { func : "name" }, function(name) {
@@ -104,6 +111,7 @@ function setTitle() {
 function logout() {
 	window.location="https://none@" + window.location.host;
 }
+
 </script>
 
 </head>
@@ -129,9 +137,10 @@ function logout() {
 
 <div id="body"></div>
 
-<div id="footer"></div>
+<div id="footer"><a href="#" id="hidesvg" onclick="removeFooterSVG()">.</a></div>
+
 </div>
 <noscript><h1>JavaScript ist deaktiviert</h1><br/><a>Hallo Freifunker, die Administration &#xFC;ber das Webinterface ben&#xF6;tigt <b>JavaScript!</b><br/><br/>Um diese Seite sinvoll Nutzen zu k&#xF6;nnen <b>aktivieren</b> Sie bitte entweder JavaScript oder Nutzen Sie den Zugang &#xFC;ber SSH. in diesem fall müssen Sie sich aber schon etwas mit der Konfiguration unter OpenWRT auskennen.<br/><br/><br/><br/></noscript>
-<img class="footer-svg" src="footer.ffbsee.animated.svg"/>
+<img id="footer-svg" src="footer.ffbsee.animated.svg"/>
 </body>
 </html>
