--- a/files/www/lan/update.html
+++ b/files/www/lan/update.html
@@ -40,7 +40,7 @@
 			<input type="hidden" name="func" value="apply_firmware" />
 			<button type="button" class="button blue sharp" onclick="$('import_file').click()">Image Ausw&auml;hlen</button>
 			<button type="submit" class="button red sharp" >Update</button>
-		</label>
+		</label><br/><br/>
 		<div>
 			<input type="checkbox" name="keep_config" value="yes" checked>
 			<label>Konfiguration beibehalten</label>
