--- a/files/www/lan/update.html
+++ b/files/www/lan/update.html
@@ -35,17 +35,15 @@
 	<div id="selected_image"></div>
 	<form action="/cgi-bin/upgrade" enctype="multipart/form-data" method="post">
 	<div class="radio_option_upgrade">
-		<label>
-			<input type="file" id="import_file" name="firmware" onchange="$('selected_image').innerHTML=this.value.replace(/^.*[\\\/](.*)$/, '$1');" style="visibility:hidden;position:absolute;top:-50;left:-50"/>
-			<input type="hidden" name="func" value="apply_firmware" />
-			<button type="button" class="button blue sharp" onclick="$('import_file').click()">Image Ausw&auml;hlen</button>
-			<button type="submit" class="button red sharp" >Update</button>
-		</label><br/><br/>
-		<div>
-			<input type="checkbox" name="keep_config" value="yes" checked>
-			<label>Konfiguration beibehalten</label>
-		</div>
-	</div>
+		<input type="checkbox" id="keep_config" name="keep_config" value="yes" checked>
+		Konfiguration beibehalten
+	</div>	
+	<label>
+		<input type="file" id="import_file" name="firmware" onchange="$('selected_image').innerHTML=this.value.replace(/^.*[\\\/](.*)$/, '$1');" style="visibility:hidden;position:absolute;top:-50;left:-50"/>
+		<input type="hidden" name="func" value="apply_firmware" />
+		<button type="button" class="button blue sharp" onclick="$('import_file').click()">Image Ausw&auml;hlen</button>
+		<button type="submit" class="button red sharp" >Update</button>
+	</label>
 	</form>
 	<p>Hier kann ein Freifunk-Image (Dateiname endet auf "*-sysupgrade.bin") oder die Firmware des Routerherstellers verwendet werden.</p>
 </fieldset>
