--- a/files/www/lan/password.html
+++ b/files/www/lan/password.html
@@ -17,7 +17,7 @@
    <div>
     <label>Best..tigung:</label> <input id="p2" type="password">
    </div>
-   <p>Das Passwort sichert den Zugriff auf diese <a href="https://192.168.133.1/">Weboberfl..che</a> ab, sowie den Direktzugriff auf den Router via <a href="https://de.wikipedia.org/wiki/Secure_Shell">SSH</a>. Der Benutzername lautet "root".</p>
+   <p>Das Passwort sichert den Zugriff auf diese <a href="https://192.168.133.1/">Weboberfl&aauml;che</a> ab, sowie den Direktzugriff auf den Router via <a href="https://de.wikipedia.org/wiki/Secure_Shell">SSH</a>. Der Benutzername lautet "root".</p>
    <p>ACHTUNG: Es ist nicht m&ouml;glich hier ein leeres Passwort zu setzen!</p>
   </fieldset>
   <fieldset>
