--- a/files/www/lan/password.html
+++ b/files/www/lan/password.html
@@ -15,9 +15,9 @@
     <label>Neues Password:</label> <input id="p1" type="password">
    </div>
    <div>
-    <label>Best..tigung:</label> <input id="p2" type="password">
+    <label>Best&auml;tigung:</label> <input id="p2" type="password">
    </div>
-   <p>Das Passwort sichert den Zugriff auf diese <a href="https://192.168.133.1/">Weboberfl&auml;che</a> ab, sowie den Direktzugriff auf den Router via <a href="https://de.wikipedia.org/wiki/Secure_Shell">SSH</a>. Der Benutzername lautet "root".</p>
+   <p>Das Passwort sichert den Zugriff auf diese Weboberfl&auml;che</a> ab, sowie den Direktzugriff auf den Router via <a href="https://de.wikipedia.org/wiki/Secure_Shell">SSH</a>. Der Benutzername lautet "root".</p>
    <p>ACHTUNG: Es ist nicht m&ouml;glich hier ein leeres Passwort zu setzen!</p>
   </fieldset>
   <fieldset>
