--- a/files/www/lan/index.html
+++ b/files/www/lan/index.html
@@ -26,19 +26,11 @@ function adv_apply()
 function adv_toggle(e)
 {
 	adv_mode = !adv_mode;
-	e.innerHTML = adv_mode ? "Erweiterte Ansicht: AN" : "Erweiterte Ansicht: AUS";
+	e.innerHTML = adv_mode ? "Erweitert: An" : "Erweitert: Aus";
 	adv_apply();
 }
 
-// Funtion will alternate between showing or hiding footer SVG
-function removeFooterSVG()
-{
-	var footersvg = document.getElementById("footer-svg");
-	footersvg.style.display = footersvg.style.display === 'none' ? '' : 'none';
-}
-
-
-function nav_onclick()
+function nav_onclick() 
 {
 	setText('msg', "");
 	var url = this.getAttribute("href");
@@ -63,16 +55,18 @@ function nav_onclick()
 	};
 
 	//load html file
-	if(id in html_cache)
+	if(id in html_cache) {
 		process_html(html_cache[id]);
-	else
+	} else {
 		jx.load(url, process_html, 'text');
+	}
 
 	//load javascript file
-	if(id in js_cache)
+	if(id in js_cache) {
 		process_js(js_cache[id]);
-	else
+	} else {
 		jx.load(url.replace(".html", ".js"), process_js, 'text');
+	}
 
 	onDesc($("globalnav"), 'UL', function(n) { hide(n); });
 	onParents(this, 'UL', function(n) { show(n); });
@@ -90,6 +84,7 @@ function preselect() {
 		if(n.getAttribute("href") != '#')
 			n.onclick = nav_onclick;
 	});
+	// Select the first tab.
 	$("first").onclick();
 }
 
@@ -99,7 +94,7 @@ function reboot() {
 		setText('msg', data);
 	});
 }
-  
+
 function setTitle() {
 	send("/cgi-bin/misc", { func : "name" }, function(name) {
 		if(name.length) {
@@ -111,36 +106,39 @@ function setTitle() {
 function logout() {
 	window.location="https://none@" + window.location.host;
 }
-
 </script>
 
 </head>
 <body onload="preselect(); setTitle();">
-<div id="menu">
-	<ul id="globalnav">
-		<li><a href="home.html" id="first">Home</a></li>
-		<li><a href="settings.html">Einstellungen</a></li>
-		<li><a href="network.html">Netzwerk</a></li>
-		<li><a href="wifiscan.html">WLAN-Scan</a></li>
-		<li><a href="update.html">Update</a></li>
-		<li><a href="password.html">Passwort</a></li>
-		<li><a href="#" onclick="reboot()">Neustart</a></li>
-		<li><a href="#" onclick="logout()">Logout</a></li>
-	</ul>
-	<a href="#" id="extendedview" onclick="adv_toggle(this)">Erweiterte Ansicht: AUS</a>
-</div>
-<div id="main">
+<noscript>
+  <strong>JavaScript required</strong>
+</noscript>
+
+<ul id="globalnav">
+	<li><a href="home.html" id="first">Home</a></li>
+	<li><a href="settings.html">Einstellungen</a></li>
+	<li><a href="network.html">Netzwerk</a></li>
+	<li><a href="wifiscan.html">WLAN-Scan</a></li>
+	<li><a href="upgrade.html">Upgrade</a></li>
+	<li><a href="password.html">Passwort</a></li>
+	<li><a href="#" onclick="reboot()">Neustart</a></li>
+	<li><a href="#" onclick="logout()">Logout</a></li>
+	<li><a href="#" onclick="adv_toggle(this)">Erweitert: Aus</a></li>
+	<li class="icon">
+		<a href="#" style="font-size:15px;" onclick="$('globalnav').classList.toggle('responsive')">☰</a>
+	</li>
+</ul>
 <br>
-<pre id="msg" tabindex="-1"></pre>
+<pre id="msg" tabindex="-1">Um diese Seite anzuzeigen, muss JavaScript aktiviert sein.</pre>
 
 <div id="help"></div>
 
 <div id="body"></div>
 
-<div id="footer"><a href="#" id="hidesvg" onclick="removeFooterSVG()">.</a></div>
-
+<div id="footer">
+	<img src="footer.ffbsee.animated.svg" alt="Animated Footer"></img>
 </div>
-<noscript><h1>JavaScript ist deaktiviert</h1><br/><a>Hallo Freifunker, die Administration &#xFC;ber das Webinterface ben&#xF6;tigt <b>JavaScript!</b><br/><br/>Um diese Seite sinvoll Nutzen zu k&#xF6;nnen <b>aktivieren</b> Sie bitte entweder JavaScript oder Nutzen Sie den Zugang &#xFC;ber SSH. in diesem fall müssen Sie sich aber schon etwas mit der Konfiguration unter OpenWRT auskennen.<br/><br/><br/><br/></noscript>
-<img id="footer-svg" src="footer.ffbsee.animated.svg"/>
+
 </body>
 </html>
+
