--- a/files/www/lan/settings.html
+++ b/files/www/lan/settings.html
@@ -15,17 +15,17 @@
 	<span id="general"></span>
 </fieldset>
 <fieldset>
-	<legend>Inhalte verk&#252;nden</legend>
+	<legend>Inhalte verkünden</legend>
 	<span id="resource"></span>
-	<p>Jeder Router kann einen Eintrag auf der Statusseite aller anderen Router anzeigen lassen. Dies soll helfen Inhalte im Freifunknetz zu finden.</p>
+	<div><br />Jeder Router kann einen Eintrag auf der Statusseite aller anderen Router anzeigen lassen. Dies soll helfen, Inhalte im Freifunknetz zu finden.</div>
 </fieldset>
 <fieldset>
 	<legend>Bandbreitenkontrolle</legend>
 	<span id="traffic"></span>
-	<p>Die f&#252;r das Freifunknetz beanspruchte Internet-Bandbreite am WAN kann hier begrenzt werden.</p>
+	<div><br />Die für das Freifunknetz beanspruchte Internet-Bandbreite am WAN kann hier begrenzt werden.</div>
 </fieldset>
 
-<button class="button blue sharp" type="button" onclick="save_data()">Speichern</button>
+<button type="button" onclick="save_data()">Speichern</button>
 
 </body>
 </html>
