Bring back some FFBSee Features

--- a/files/www/lan/home.html
+++ b/files/www/lan/home.html
@@ -17,7 +17,8 @@
 <div><label>MAC-Adresse: </label><span id="mac">?</span></div>
 <div><label>Bekannte Knoten: </label><span id="node_count">?</span></div>
 <div><label>Nachbarknoten: </label><span id="neigh_count">?</span></div>
-<div><label>VPN Server: </label><span id="vpn_server">?</span></div>
+<div><label>Gateway: </label><span id="vpn_server">?</span></div>
+<div><label>IP Version: </label><span id="ip_version">?</span></div>
 <div><label>Laufzeit: </label><span id="uptime">?</span></div>
 <div><label>CPU: </label><span id="load">?</span></div>
 <div><label>RAM: </label><span id="memory_usage">?</span></div>
