--- a/files/www/lan/home.html
+++ b/files/www/lan/home.html
@@ -57,7 +57,7 @@
 <fieldset>
 <legend id="software">Software</legend>
 <div><label>Firmware Version: </label><span id="firmware_version">?</span></div>
-<div><label>LEDE Version: </label><span id="lede_version">?</span></div>
+<div><label>Openwrt Version: </label><span id="openwrt_version">?</span></div>
 <div><label>Batman-Adv Version: </label><span id="batman_version">?</span></div>
 <div><label>Fastd Version: </label><span id="fastd_version">?</span></div>
 </fieldset>
