--- a/files/www/lan/index.html
+++ b/files/www/lan/index.html
@@ -26,7 +26,7 @@ function adv_apply()
 function adv_toggle(e)
 {
 	adv_mode = !adv_mode;
-	e.innerHTML = adv_mode ? "Erweitert: An" : "Erweitert: Aus";
+	e.innerHTML = adv_mode ? "Extended: An" : "Extended: Aus";
 	adv_apply();
 }
 
@@ -116,14 +116,14 @@ function logout() {
 
 <ul id="globalnav">
 	<li><a href="home.html" id="first">Home</a></li>
-	<li><a href="settings.html">Einstellungen</a></li>
-	<li><a href="network.html">Netzwerk</a></li>
+	<li><a href="settings.html">Settings</a></li>
+	<li><a href="network.html">Network</a></li>
 	<li><a href="wifiscan.html">WLAN-Scan</a></li>
 	<li><a href="upgrade.html">Upgrade</a></li>
-	<li><a href="password.html">Passwort</a></li>
-	<li><a href="#" onclick="reboot()">Neustart</a></li>
+	<li><a href="password.html">Password</a></li>
+	<li><a href="#" onclick="reboot()">Reboot</a></li>
 	<li><a href="#" onclick="logout()">Logout</a></li>
-	<li><a href="#" onclick="adv_toggle(this)">Erweitert: Aus</a></li>
+	<li><a href="#" onclick="adv_toggle(this)">Extended: Aus</a></li>
 	<li class="icon">
 		<a href="#" style="font-size:15px;" onclick="$('globalnav').classList.toggle('responsive')">☰</a>
 	</li>
