--- a/files/www/lan/password.html
+++ b/files/www/lan/password.html
@@ -18,7 +18,7 @@
 	<div>
 		<label>Confirm Password:</label> <input id="p2" type="password">
 	</div>
-	<div><br />The password secures access to this web interface, as well as direct access to the router via <a href="https://de.wikipedia.org/wiki/Secure_Shell">SSH</a>. Der Benutzername lautet "root".</div>
+	<div><br />The password secures access to this web interface, as well as direct access to the router via <a href="https://de.wikipedia.org/wiki/Secure_Shell">SSH</a>. The username is "root".</div>
 </fieldset>
 <div>
 	<button type="button" onclick="apply()">Save changes</button>
