Google Translate API added

--- a/files/www/lan/home.html
+++ b/files/www/lan/home.html
@@ -10,6 +10,14 @@
 </head>
 <body onload="init();">
 
+<div align='right' id="google_translate_element"></div>
+
+<script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
+}
+</script>
+  
 <fieldset>
 <legend id="system">System</legend>
 <div><label>Name: </label><span id="name">?</span></div>
