--- a/files/www/lan/home.html
+++ b/files/www/lan/home.html
@@ -17,6 +17,7 @@ function googleTranslateElementInit() {
   new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
 }
 </script>
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
   
 <fieldset>
 <legend id="system">System</legend>
