--- a/files/www/lan/index.html
+++ b/files/www/lan/index.html
@@ -7,6 +7,15 @@
 <link rel="stylesheet" type="text/css" href="style.css" />
 <script src="shared.js"></script>
 
+<div align='right' id="google_translate_element"></div>
+
+<script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
+}
+</script>
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+	
 <script type="text/javascript">
 var html_cache = {};
 var js_cache = {};
