--- a/files/www/lan/network.html
+++ b/files/www/lan/network.html
@@ -9,6 +9,15 @@
 <script src="network.js"></script>
 </head>
 <body onload="init();">
+  
+<div align='right' id="google_translate_element"></div>
+
+<script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
+}
+</script>
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
 <div id="other"></div>
 <div id="assignment"></div>
