--- a/files/www/lan/password.html
+++ b/files/www/lan/password.html
@@ -9,6 +9,16 @@
 <script src="password.js"></script>
 </head>
 <body onload="init();">
+	
+<div align='right' id="google_translate_element"></div>
+
+<script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
+}
+</script>
+
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
 <fieldset>
 	<legend>Passwort</legend>
