--- a/files/www/lan/wifiscan.html
+++ b/files/www/lan/wifiscan.html
@@ -9,6 +9,16 @@
 <script src="wifiscan.js"></script>
 </head>
 <body onload="init();">
+	
+<div align='right' id="google_translate_element"></div>
+
+<script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
+}
+</script>
+
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
 <fieldset id="wifiscan">
 	<legend>WLAN-Scan</legend>
