UI changes to differentiate the new firmware to the old incompatible one

--- a/files/www/lan/home.html
+++ b/files/www/lan/home.html
@@ -18,6 +18,7 @@
 <div><label>Bekannte Knoten: </label><span id="node_count">?</span></div>
 <div><label>Nachbarknoten: </label><span id="neigh_count">?</span></div>
 <div><label>Gateway: </label><span id="vpn_server">?</span></div>
+<div><label>Routing-Algo: </label><span id="routing-algo">?</span></div>
 <div><label>IP Version: </label><span id="ip_version">?</span></div>
 <div><label>Laufzeit: </label><span id="uptime">?</span></div>
 <div><label>CPU: </label><span id="load">?</span></div>
