--- a/files/www/freifunk/index.html
+++ b/files/www/freifunk/index.html
@@ -8,6 +8,6 @@
 	<meta http-equiv="pragma" content="no-cache">
 </head>
 <body>
-	<a href="/cgi-bin/status">Redirecting...</a>
+	<a href="/cgi-bin/status"><marquee scrollamount="10" scrolldelay="10">Redirecting...</marquee></a>
 </body>
 </html>
